src/test/deca/syntax/invalid/resultats/test14_decl_inst-lex.res
'{': [@0,363:363='{',<36>,15:0]
'print': [@1,366:370='print',<17>,16:1]
'(': [@2,371:371='(',<34>,16:6]
FLOAT: [@3,372:377='1.2e12',<46>,16:7]
')': [@4,378:378=')',<35>,16:13]
';': [@5,379:379=';',<39>,16:14]
IDENT: [@6,382:384='int',<26>,17:1]
IDENT: [@7,386:386='x',<26>,17:5]
'=': [@8,388:388='=',<29>,17:7]
INT: [@9,390:390='3',<1>,17:9]
';': [@10,391:391=';',<39>,17:10]
'}': [@11,393:393='}',<37>,18:0]
